--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-three/cannon": "^4.7.0",
+    "@react-three/fiber": "^7.0.26",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "three": "^0.138.0"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
