--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@react-three/cannon": "^4.7.0",
+    "@react-three/drei": "^8.11.0",
     "@react-three/fiber": "^7.0.26",
+    "@types/three": "^0.137.0",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3",
     "three": "^0.138.0"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
-    "@types/styled-components": "^5.1.23",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
