--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-three/cannon": "^4.7.0",
     "@react-three/drei": "^8.11.0",
     "@react-three/fiber": "^7.0.26",
+    "@react-three/postprocessing": "^2.1.6",
     "@types/three": "^0.137.0",
     "next": "^12.1.0",
+    "postprocessing": "^6.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "three": "^0.138.0"
